--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.26.9",
+    "sass-loader": "^9.0.1",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
